feat(case): define a case type

--- a/pubapi/tests/fixtures/cases.yml
+++ b/pubapi/tests/fixtures/cases.yml
@@ -5,6 +5,7 @@
   status: closed
   assigned_to: 11111111-1111-1111-1111-111111111111
   created_at: 2025-09-01T12:34:56.120Z
+  type: decision
 
 - id: 11111111-1111-1111-1111-111111111111
   org_id: 00000000-0000-0000-0000-000000000000
@@ -13,3 +14,4 @@
   status: closed
   assigned_to: 11111111-1111-1111-1111-111111111111
   created_at: 2025-08-01T12:34:56.012Z
+  type: decision
