--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -80,7 +80,12 @@
         "offloading",
         "test_run_summary",
         "case_review",
-        "analytics_export"
+        "analytics_export",
+        "send_billing_event",
+        "continuous_screening_do_screening",
+        "continuous_screening_evaluate_need",
+        "continuous_screening_scan_dataset_updates",
+        "continuous_screening_apply_delta_file"
       ]
     },
     {
