feat(continuous_screening): create worker to build full dataset file

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -84,7 +84,8 @@
         "send_billing_event",
         "continuous_screening_do_screening",
         "continuous_screening_scan_dataset_updates",
-        "continuous_screening_apply_delta_file"
+        "continuous_screening_apply_delta_file",
+        "continuous_screening_create_full_dataset"
       ]
     },
     {
