--- a/.env.example
+++ b/.env.example
@@ -201,3 +201,8 @@ KILL_IF_READ_LICENSE_ERROR=false
 # AI_AGENT_MAIN_AGENT_LOCATION=
 # API key of the Perplexity API (for enrichment)
 # AI_AGENT_PERPLEXITY_API_KEY=
+
+# URL to the base manifest file used by continuous screening to based the datasets configuration on
+# The manifest should contain the base configuration(e.g. catalogs with Default scope)
+CONTINUOUS_SCREENING_MANIFEST_URL="/path/to/manifest.json"
+MARBLE_BACKEND_URL=https://api.checkmarble.com
