feat(continuous_screening): Secure the dataset endpoint

--- a/.env.example
+++ b/.env.example
@@ -205,4 +205,6 @@ KILL_IF_READ_LICENSE_ERROR=false
 # URL to the base manifest file used by continuous screening to based the datasets configuration on
 # The manifest should contain the base configuration(e.g. catalogs with Default scope)
 CONTINUOUS_SCREENING_MANIFEST_URL="/path/to/manifest.json"
-MARBLE_BACKEND_URL=https://api.checkmarble.com
+MARBLE_API_URL=https://api.checkmarble.com
+# Token used to authenticate the screening indexer to access the dataset files
+SCREENING_INDEXER_TOKEN=some-random-token
