--- a/.env.example
+++ b/.env.example
@@ -203,5 +203,5 @@ KILL_IF_READ_LICENSE_ERROR=false
 # AI_AGENT_PERPLEXITY_API_KEY=
 
 MARBLE_API_URL=https://api.checkmarble.com
-# Token used to authenticate the screening indexer to access the dataset files
+# Token used to authenticate the screening indexer to access the dataset files. Use openssl to generate one.
 SCREENING_INDEXER_TOKEN=some-random-token
