--- a/.env.example
+++ b/.env.example
@@ -69,6 +69,7 @@ CASE_MANAGER_BUCKET_URL="file://./tempFiles/case-manager-bucket?create_dir=true"
 TRANSFER_CHECK_ENRICHMENT_BUCKET_URL="file://./tempFiles/transfercheck-bucket?create_dir=true"
 OFFLOADING_BUCKET_URL="file://./tempFiles/offloading-bucket?create_dir=true"
 ANALYTICS_BUCKET_URL="file://./tempFiles/offloading-bucket?create_dir=true"
+CONTINUOUS_SCREENING_ENTITIES_BUCKET_URL="file://./tempFiles/continuous-screening-entities-bucket?create_dir=true"
 
 # Configure the connection details to your Metabase instance.
 #  - To retrieve the JWT signing key, go to your Metabase admin panel, in 'Settings', then 'Embedding', and click 'Manage' under 'Static embedding'
@@ -201,3 +202,7 @@ KILL_IF_READ_LICENSE_ERROR=false
 # AI_AGENT_MAIN_AGENT_LOCATION=
 # API key of the Perplexity API (for enrichment)
 # AI_AGENT_PERPLEXITY_API_KEY=
+
+MARBLE_API_URL=https://api.checkmarble.com
+# Token used to authenticate the screening indexer to access the dataset files. Use openssl to generate one.
+SCREENING_INDEXER_TOKEN=some-random-token
