feat(continuous_screening): define internal url in case public API and internal are not the same

--- a/.env.example
+++ b/.env.example
@@ -203,6 +203,6 @@ KILL_IF_READ_LICENSE_ERROR=false
 # API key of the Perplexity API (for enrichment)
 # AI_AGENT_PERPLEXITY_API_KEY=
 
-MARBLE_API_URL=https://api.checkmarble.com
+MARBLE_API_INTERNAL_URL=https://api.internal.checkmarble.com
 # Token used to authenticate the screening indexer to access the dataset files. Use openssl to generate one.
 SCREENING_INDEXER_TOKEN=some-random-token
