--- a/pubapi/openapi/v1beta.yml
+++ b/pubapi/openapi/v1beta.yml
@@ -581,10 +581,10 @@ paths:
                   type: string
                 object_payload:
                   type: object
-                should_screen:
+                skip_screen:
                   type: boolean
                   default: false
-                  description: Whether the object should be screened immediately. If false, the API returns 204 No Content.
+                  description: Whether to skip screening the object immediately. If true, the API returns 204 No Content.
               oneOf:
                 - required:
                     - object_id
