chore: add sentry groups in dependabot configuration"

--- a/.github/dependabot.yaml
+++ b/.github/dependabot.yaml
@@ -14,5 +14,8 @@ updates:
       opentelemetry:
         patterns:
           - "go.opentelemetry.io/*"
+      sentry:
+        patterns:
+          - "github.com/getsentry/sentry-go*"
     cooldown:
       default-days: 14
