remove object_risk_metadata related files

--- a/contrib/screening-manifest.json
+++ b/contrib/screening-manifest.json
@@ -2,7 +2,7 @@
     "catalogs": [
         {
             "url": "https://data.opensanctions.org/datasets/latest/index.json",
-            "scope": "default",
+            "scope": "us_sanctions",
             "resource_name": "entities.ftm.json"
         },
         {
