--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -37,7 +37,11 @@ services:
     volumes:
       - es:/usr/share/elasticsearch/data
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:9200/_cluster/health?wait_for_status=yellow || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "curl -f http://localhost:9200/_cluster/health?wait_for_status=yellow || exit 1",
+        ]
       interval: 5s
       timeout: 5s
       retries: 5
@@ -71,7 +75,7 @@ services:
       - db
   motiva:
     container_name: motiva
-    image: ghcr.io/apognu/motiva:v0.5.2
+    image: ghcr.io/apognu/motiva:v0.6.0
     platform: linux/x86_64
     ports:
       - "8000:8000"
@@ -86,7 +90,6 @@ services:
       - ./contrib/screening-manifest.json:/tmp/manifest.json
     extra_hosts:
       - "marble-backend:host-gateway"
-
 
 volumes:
   postgres-db:
