--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     container_name: postgres
-    image: postgres:17
+    image: postgis/postgis:17-3.6-alpine
     shm_size: 1g
     restart: always
     environment:
@@ -37,7 +37,9 @@ services:
     volumes:
       - es:/usr/share/elasticsearch/data
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:9200/_cluster/health?wait_for_status=yellow || exit 1"]
+      test:
+        - "CMD-SHELL"
+        - "curl -f http://localhost:9200/_cluster/health?wait_for_status=yellow || exit 1"
       interval: 5s
       timeout: 5s
       retries: 5
@@ -71,7 +73,7 @@ services:
       - db
   motiva:
     container_name: motiva
-    image: ghcr.io/apognu/motiva:v0.5.2
+    image: ghcr.io/apognu/motiva:v0.6.0
     platform: linux/x86_64
     ports:
       - "8000:8000"
@@ -86,7 +88,6 @@ services:
       - ./contrib/screening-manifest.json:/tmp/manifest.json
     extra_hosts:
       - "marble-backend:host-gateway"
-
 
 volumes:
   postgres-db:
